tests/cases_invalid/expressions/invalid_underscore_f32_int_part/.expected
error: expected identifier
 --> ./cases_invalid/expressions/invalid_underscore_f32_int_part/main.shd:1:18
  |
1 | buf value = _123.;
  |                  ^ here
  |
